--- a/fxk-boot-starter-websocket/src/main/java/com/fanxuankai/boot/websocket/t.html
+++ b/fxk-boot-starter-websocket/src/main/java/com/fanxuankai/boot/websocket/t.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Java 后端 WebSocket 的 Tomcat 实现</title>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
 </head>
 
 <body>
 <div id="main" style="width: 1200px;height:800px;"></div>
-Welcome<br/><input id="text" type="text" />
+Welcome<br/><input id="text" type="text"/>
 <button onclick="send()">发送消息</button>
 <hr/>
 <button onclick="closeWebSocket()">关闭WebSocket连接</button>
@@ -19,36 +19,36 @@ Welcome<br/><input id="text" type="text" />
 <script type="text/javascript">
     var websocket = null;
     //判断当前浏览器是否支持WebSocket
-    if('WebSocket' in window) {
+    if ('WebSocket' in window) {
         websocket = new WebSocket("ws://localhost:8080/api/websocket/100");
     } else {
         alert('当前浏览器 Not support websocket')
     }
 
     //连接发生错误回调方法
-    websocket.onerror = function() {
+    websocket.onerror = function () {
         setMessageInnerHTML("WebSocket连接发生错误");
     };
 
     //连接成功建立回调方法
-    websocket.onopen = function() {
+    websocket.onopen = function () {
         setMessageInnerHTML("WebSocket连接成功");
     }
     var U01data, Uidata, Usdata
     //接收消息回调方法
-    websocket.onmessage = function(event) {
+    websocket.onmessage = function (event) {
         console.log(event);
         setMessageInnerHTML(event);
         setechart()
     }
 
     //连接关闭回调方法
-    websocket.onclose = function() {
+    websocket.onclose = function () {
         setMessageInnerHTML("WebSocket连接关闭");
     }
 
     //监听窗口关闭事件
-    window.onbeforeunload = function() {
+    window.onbeforeunload = function () {
         closeWebSocket();
     }
 
